# lingam-example

./: .gitignore  README.md  pyproject.toml
scr/: bup_normal_unif.py  bup_sem.py  fns.py  generate_data.py  run_models.py  save_pairplots.py
