[tool.poetry]
name = "python-templete"
version = "0.1.0"
description = ""
authors = ["shane <https://github.com/Shena4746/python-templete>"]

[tool.poetry.dependencies]
python = "3.10.7"
lingam = "^1.7.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
graphviz = "^0.20.1"
igraph = "^0.10.2"
pygam = "^0.8.0"
factor-analyzer = "^0.4.1"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
ipykernel = "^6.15.1"
nptyping = "^2.4.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"